Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-9191

Uninitialized variable use in EnumEnhMetaFile when running gdi32_apitest:metafile

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Wine

    Description

      Running Wine Test, Module: gdi32, Test: metafile
      WARNING:  NtUserNotifyProcessCreate at ..\..\win32ss\user\ntuser\ntstubs.c:588 is UNIMPLEMENTED!
      err:(..\..\win32ss\user\user32\misc\dllmain.c:403) HACK: Hackish NtUserProcessConnect call!!
      (..\..\win32ss\user\ntuser\winsta.c:937) err: WS : Granted Access 000F037F
      err:(..\..\win32ss\user\user32\misc\dllmain.c:426) HACK: Using Init-ClientThreadSetupHelper hack!!
      (..\..\win32ss\user\winsrv\consrv\frontends\gui\conwnd.c:767) TODO: Destroy console caret
      metafile.c:192: hdcDisplay 760102A3
      metafile.c:220: hdcMetafile 6B210310
      Break instruction exception - code 80000003 (first chance)
      001b:77bc74a3 cc              int     3
      kd> .reload
      Connected to Windows Server 2003 3790 x86 compatible target at (Sun Feb 15 17:11:29.879 2015 (UTC + 1:00)), ptr64 FALSE
      Loading Kernel Symbols
      ...................................................
      Loading User Symbols
      ..............
      kd> kp
      ChildEBP RetAddr  
      0012f86c 77bc75a3 gdi32!_RTC_DefaultErrorFuncW(int errType = 3, wchar_t * file = 0x77bec9c0 "unknown file", int line = 0xffffffff, wchar_t * module = 0x77bec9a0 "unknown module", wchar_t * format = 0x77bec958 "Use of uninitialized variable %S!.")+0x3 [c:\ros\reactos-clean\reactos\lib\sdk\runtmchk\rtcapi.c @ 29]
      0012f890 77bce511 gdi32!_RTC_UninitUse(char * _Varname = 0x77bcec69 "vp_size")+0x23 [c:\ros\reactos-clean\reactos\lib\sdk\runtmchk\rtcapi.c @ 107]
      0012f9cc 0045ec14 gdi32!EnumEnhMetaFile(struct HDC__ * hdc = 0x00000000, struct HENHMETAFILE__ * hmf = 0x6e460301, <function> * callback = 0x0045ecf0, void * data = 0x0012f9fc, struct tagRECT * lpRect = 0x00000000)+0x3b1 [c:\ros\reactos-clean\reactos\win32ss\gdi\gdi32\wine\enhmetafile.c @ 2363]
      0012fe1c 0045e1fd gdi32_winetest!test_ExtTextOut(void)+0x834 [c:\ros\reactos-clean\reactos\modules\rostests\winetests\gdi32\metafile.c @ 276]
      0012fe24 00472ba4 gdi32_winetest!func_metafile(void)+0xd [c:\ros\reactos-clean\reactos\modules\rostests\winetests\gdi32\metafile.c @ 3382]
      0012fe40 00472a38 gdi32_winetest!run_test(char * name = 0x00134a70 "metafile")+0xa4 [c:\ros\reactos-clean\reactos\include\reactos\wine\test.h @ 615]
      0012fedc 00473bbc gdi32_winetest!main(int argc = 2, char ** argv = 0x00133a60)+0x188 [c:\ros\reactos-clean\reactos\include\reactos\wine\test.h @ 671]
      0012ffb4 004738f6 gdi32_winetest!__tmainCRTStartup(void)+0x2ac [c:\ros\reactos-clean\reactos\lib\sdk\crt\startup\crtexe.c @ 310]
      0012ffc0 77d93909 gdi32_winetest!mainCRTStartup(void)+0x26 [c:\ros\reactos-clean\reactos\lib\sdk\crt\startup\crtexe.c @ 196]
      0012fff0 00000000 kernel32!BaseProcessStartup(<function> * lpStartAddress = 0x004738d0)+0x69 [c:\ros\reactos-clean\reactos\dll\win32\kernel32\client\proc.c @ 478]

      Wine's version of this function looks the same as ours, so they have the same bug. Fix should go upstream.

      Attachments

        Activity

          People

            ThFabba ThFabba
            ThFabba ThFabba
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: