[GDI32] - Fix uninitialized variable use in EnumEnhMetaFile - Apply Wine commit 88e81025 (gdi32: Fix typo in a condition (PVS-Studio).) by André Hentschel CORE-9191 #resolve

svn path=/trunk/; revision=67126